syntax = "proto3";

package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloHello (HelloRequest) returns (stream HelloReply) {}
    rpc SayHelloHelloHello (stream HelloRequest) returns (HelloReply) {}
    rpc SayHelloHelloHelloHello (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}